@@ -747,7 +747,11 @@ void JSDOMWindowBase::printErrorMessage(const String& message) const
     if (!frame)
         return;
 
-    if (frame->settings()->privateBrowsingEnabled())
+    Settings* settings = frame->settings();
+    if (!settings)
+        return;
+    
+    if (settings->privateBrowsingEnabled())
         return;
 
     impl()->console()->addMessage(JSMessageSource, ErrorMessageLevel, message, 1, String()); // FIXME: provide a real line number and source URL.
